amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/empty-interface.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/empty-interface.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#empty-definition
  Message: Interface definitions must have at least one field
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/empty-interface.api.graphql#/declares/shape/HasId
  Property: http://www.w3.org/ns/shacl#property
  Range: [(13,0)-(13,15)]
  Location: 
